finalizado login, registrase

--- a/index.html
+++ b/index.html
@@ -61,63 +61,26 @@
               <a class="nav-link  py-1 ajuste-texto-menu" href="#">RESULTADOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  py-1 ajuste-texto-menu" href="#">TURNOS</a>
+              <a class="nav-link  py-1 ajuste-texto-menu" href="./login.html">TURNOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link py-1 ajuste-texto-menu" href="#">PRODUCTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ajuste-texto-menu" href="./registrados/home.html">CONTACTOS</a>
+              <a class="nav-link py-1 ajuste-texto-menu" href="./home.html">CONTACTOS</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+    
     <div class=" cabecera navbar1 col-6 col-sm-4">
-      <div class="modal fade" id="exampleModalToggle1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel1"
-        tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5 texto-interno text-center" id="exampleModalToggleLabel1">INICIAR SESION</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form action="">
-                <div class="mb-3">
-                  <label for="exampleFormControlInput1" class="form-label texto-label">EMAIL</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleFormControlInput2" class="form-label texto-label">CONTRASEÑA</label>
-                  <input type="password" class="form-control" id="exampleFormControlInput2" placeholder="">
-                </div>
-              </form>
-              <div class="botones-formulario text-center">
-                <button class="btn btn-primary boton-interno">ENVIAR</button>
-                <button type="button" class="btn btn-primary boton-interno" data-bs-dismiss="modal"
-                  aria-label="Close">CERRAR</button>
-              </div>
-
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-              <div class="recuperar-contraseña">
-                ¿No estas registrado?
-                <a href="./registrarse/registrarse.html" class="text-decoration-none">Registrarse</a>
-              </div>
-              <div class="recuperar-contraseña">
-                ¿Olvidaste la contraseña?
-                <a href="" class="text-decoration-none">Cambiar contraseña</a>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="d-flex justify-content-center  align-items-center">
+        <a class="registrarse" href="./login.html">LOGIN</a>
       </div>
-     <button class="registrarse" data-bs-target="#exampleModalToggle1" data-bs-toggle="modal">LOGIN</button>
-
         <div class="d-flex justify-content-center  align-items-center">
-          <a class="registrarse" href="./registrarse/registrarse.html">REGISTRARSE</a>
+          <a class="registrarse" href="./registrarse.html">REGISTRARSE</a>
         </div>
       </div>
     </nav>
