--- a/misturnos.html
+++ b/misturnos.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
         <title>Mis turnos</title>
       </head>
 <body>
@@ -24,30 +24,38 @@
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
         <a href="./home.html">
           <div class="imagen-logo ajuste-texto-menu">
-            <img src="../imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+            <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
         </a>
         <ul class="navbar-nav navbar4 container-fluid p-0">
           <li class="nav-item">
-            <a class="nav-link py-1 ajuste-texto-menu" href="#">Mis Datos</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="./misdatos.html">Mis Datos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ajuste-texto-menu" href="#">Solicitar Turno</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="./solicitartuno.html">Solicitar Turno</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis Turnos</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./misturnos.html">Mis Turnos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis consultas</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./misconsultas.html">Mis consultas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="../index.html">Cerrar Sesion</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./index.html">Cerrar Sesion</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
+  <main>
+    <p>MIS TURNOS</p>
+  </main>
+  <footer class="d-flex row p-0 footer-home">
+    <div class="contenedor-logo-final-home">
+      <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
+    </div>
+  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
