--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
   <title>Inicio-Sesion</title>
 </head>
 
@@ -28,24 +28,24 @@
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
         <a href="">
           <div class="imagen-logo ajuste-texto-menu">
-            <img src="../imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+            <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
         </a>
         <ul class="navbar-nav navbar4 container-fluid p-0">
           <li class="nav-item">
-            <a class="nav-link py-1 ajuste-texto-menu" href="#">Mis Datos</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="./misdatos.html">Mis Datos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ajuste-texto-menu" href="#">Solicitar Turno</a>
+            <a class="nav-link py-1 ajuste-texto-menu" href="./solicitartuno.html">Solicitar Turno</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis Turnos</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./misturnos.html">Mis Turnos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="#">Mis consultas</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./misconsultas.html">Mis consultas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  py-1 ajuste-texto-menu" href="../index.html">Cerrar Sesion</a>
+            <a class="nav-link  py-1 ajuste-texto-menu" href="./index.html">Cerrar Sesion</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
       <div class="col-md-4  ft">
         <a href="./misdatos.html">
           <div class="d-flex justify-content-center align-items-center">
-            <img class="iconos" src="../imagenes/icons8-tarjeta-de-identificación-50.png" alt="">
+            <img class="iconos" src="./imagenes/icons8-tarjeta-de-identificación-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Mis datos</p>
           </div>
         </a>
@@ -68,7 +68,7 @@
       <div class="col-md-4 ft ">
         <a href="./solicitartuno.html">
           <div class="d-flex justify-content-center align-items-center">
-            <img class="iconos" src="../imagenes/icons8-más-50.png" alt="">
+            <img class="iconos" src="./imagenes/icons8-más-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Solicitar turno</p>
           </div>
         </a>
@@ -77,7 +77,7 @@
       <div class="col-md-4 ft">
         <a href="./misturnos.html">
           <div class="d-flex justify-content-center align-items-center">
-            <img class="iconos" src="../imagenes/icons8-calendario-50.png" alt="">
+            <img class="iconos" src="./imagenes/icons8-calendario-50.png" alt="">
             <p class="texto-tarjetas-main-home ms-1 hover">Mis turnos</p>
           </div>
         </a>
@@ -86,20 +86,20 @@
       <div class="col-md-4 ft">
         <a  href="./misconsultas.html">
           <div class="d-flex justify-content-center align-items-center">
-          <img class="iconos" src="../imagenes/icons8-boleta-de-calificaciones-50.png" alt="">
+          <img class="iconos" src="./imagenes/icons8-boleta-de-calificaciones-50.png" alt="">
           <p class="texto-tarjetas-main-home ms-1 hover">Mis consultas</p>
         </div>
         </a>
       </div>
       
 </div>
-
-
-
-
-
   </main>
 
+  <footer class="d-flex row p-0 footer-home">
+    <div class="contenedor-logo-final-home">
+      <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
+    </div>
+  </footer>
 
 
 
