cambios realizados antes de agregar el push de spring

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
           <!-- PASSWORD INPUT -->
           <label for="password">Contraseña</label>
           <input type="password" placeholder="Enter Password">
-          <a href="/"><button class="bn632-hover-login bn26">Iniciar sesion</button></a>
+          <a href="#"><button class="bn632-hover-login bn26">Iniciar sesion</button></a>
           <a class="fs-6"  href="#">Recuperar contraseña</a><br>
           <a class="fs-6" href="./registrarse.html">¿No tienes cuenta?</a>
         </form>
