--- a/registrarse.html
+++ b/registrarse.html
@@ -112,7 +112,7 @@
     </div>
    </form>
 <div class="boton-de-registro text-center ">
-  <a href="/"><button class="bn632-hover bn26">Enviar</button></a>
+  <a href="#"><button class="bn632-hover bn26">Enviar</button></a>
 </div>
 <div class="text-center fs-5 ">
   <a class="m-2 " href="./login.html">¿Ya esta registrado?</a>
